--- a/scss/modules/navigation.scss
+++ b/scss/modules/navigation.scss
@@ -1,3 +1,5 @@
+@import './mixins.scss';
+
 .navigation-bar {
   z-index: 1;
   min-height: 50px;
@@ -62,7 +64,7 @@
     }
 
     &:hover {
-      @include menuLinkHower();
+      @include menuLinkHover();
       @media (min-width: 768px) {
         background-color: initial;
       }
